# stories

./: .gitignore  Cargo.toml  chirp.db  license.md  readme.md
.github/workflows/: publish.yml  test-on-pr.yml
chirp/: .gitignore  Cargo.toml  readme.md
chirp/src/: actions.rs  db.rs  entities.rs  feed.rs  lib.rs  main.rs  scraping.rs  utils.rs
chirp/src/actions/: add.rs  collections.rs  content.rs  intro.rs  mark.rs  mod.rs  phrases.rs  remove.rs  retrievals.rs  search.rs  sources.rs  statistics.rs  update.rs  view.rs
chirp/src/db/: collection.rs  content.rs  init.rs  logging.rs  mark.rs  mod.rs  phrases.rs  retrievals.rs  search.rs  source.rs  statistics.rs  utils.rs
chirp/src/db/utils/: cuter.rs  mod.rs
chirp/src/entities/: dto_maps.rs  mod.rs
chirp/src/feed/: feed_atom.rs  feed_enrichment.rs  feed_fetch.rs  feed_rss.rs  feed_website.rs  mod.rs
chirp/src/feed/rss/: mod.rs
chirp/src/scraping/: _articles.rs  articles.rs  mod.rs  page.rs  utilities.rs
site/: package-lock.json  package.json
site/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
site/src/components/buttons/download-button/: download-button.module.css  index.tsx
site/src/components/chip/: chip.module.css  index.tsx
site/src/components/download-bar/: download-bar.module.css  index.tsx
site/src/components/illustrations/hero-bg/: hero-bg.module.css  index.tsx
site/src/components/illustrations/me/: index.tsx
site/src/components/illustrations/questions-answered/: index.tsx
site/src/components/logos/app-icon/: app-icon.module.css  index.tsx
site/src/components/logos/hero-logo/: hero-logo.module.css  index.tsx
site/src/components/logos/logo-alt/: index.tsx
site/src/data/: urls.ts
src/: main.rs
stories/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
stories/src/: main.tsx
stories/src-tauri/: Cargo.toml  Info.plist  gen-types.sh  tauri.conf.json
stories/src-tauri/capabilities/: main.json
stories/src-tauri/icons/: icon.icns
stories/src-tauri/src/: background.rs  commands.rs  lib.rs  main.rs
stories/src-tauri/src/background/: updates.rs
stories/src-tauri/src/commands/: collections.rs  content.rs  mark.rs  mod.rs  phrases.rs  retrievals.rs  search.rs  sources.rs  statistics.rs
stories/src/components/alternate/: search-shortcut-handler.tsx
stories/src/components/atoms/button/: index.tsx  interfaces.ts
stories/src/components/atoms/forms/field/: index.tsx  interfaces.ts
stories/src/components/atoms/headings/: index.tsx
stories/src/components/atoms/hero/: index.tsx
stories/src/components/atoms/icons/: add-circle.tsx  angle-left.tsx  arrow-circle.tsx  bookmark.tsx  chat.tsx  diagonal-eye.tsx  disembodied.tsx  ellipsis.tsx  extension.tsx  finger.tsx  flower.tsx  forum.tsx  grid.tsx  icon-loading-ring.tsx  in-new.tsx  interfaces.ts  join.tsx  label-add.tsx  list.tsx  magic.tsx  oscheek.tsx  paint-roller.tsx  refresh.tsx  remove.tsx  search.tsx  shapes.tsx  tick-circle.tsx  widgets-add.tsx  widgets.tsx
stories/src/components/atoms/image-canvas/: index.tsx  interfaces.d.ts  interfaces.ts
stories/src/components/atoms/popover/: index.tsx  interfaces.ts
stories/src/components/atoms/relative-date/: index.tsx
stories/src/components/molecules/bookmark/: index.tsx
stories/src/components/molecules/buttons-group/: index.tsx  interfaces.ts
stories/src/components/molecules/filter-button/: index.tsx  interfaces.ts
stories/src/components/molecules/list-action-bar/: index.tsx  interface.ts
stories/src/components/molecules/visual/: index.tsx  interfaces.d.ts
stories/src/components/organisms/app-header/: index.tsx
stories/src/components/organisms/collection-customizer/: index.tsx  interfaces.ts
stories/src/components/organisms/collection-empty-message/: index.tsx
stories/src/components/organisms/fail-banner/: index.tsx
stories/src/components/organisms/loading-indicator/: index.tsx
stories/src/components/organisms/title-crumbs/: index.tsx  interfaces.ts
stories/src/components/templates/collection/: hooks.ts  index.tsx  interface.ts
stories/src/components/templates/collection-edit/: index.tsx  interfaces.ts
stories/src/components/templates/collection-search/: index.tsx
stories/src/components/templates/login/: index.tsx
stories/src/components/templates/not-found/: index.tsx
stories/src/components/templates/reader/: index.tsx  reader.interfaces.ts  reader.scss
stories/src/data/: chirp-types.ts  listing.interface.ts  top-routes.ts
stories/src/redux/: initial-state.ts  reducers.ts  redux-wrapper.tsx  store.ts
stories/src/redux/features/: collectionSettingsSlice.ts  collectionToCollectionSlice.ts  collectionToPhraseSlice.ts  collectionToSourceSlice.ts  collectionsSlice.ts  contentBodiesSlice.ts  contentsSlice.ts  darkmodeReducer.ts  marksSlice.ts  navSlice.ts  phrasesSlice.ts  searchSlice.ts  sessionSlice.ts  sourcesSlice.ts  themeSlice.ts
stories/src/styles/: global.scss  wind.css
stories/src/types/: elements.d.ts
stories/src/utilities/: animate.ts  arrays.ts  dates.ts  debugging.ts  os.ts  requests.ts
stories/src/utilities/graphics/: color-thief.ts  colours.ts  image.ts  quantize.ts
stories/src/views/: index.tsx
(+40 files in other folders)
