[package]
name = "chirp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = "0.12.1"
chrono = "0.4.24"
directories = "5.0.1"
futures = "0.3.28"
reqwest = "0.11.16"
rss = "2.0.3"
rusqlite = { version = "0.29.0", features = ["bundled", "vtab", "array"] }
scraper = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
# typeshare is built on serde so maybe conflicts in future?
typeshare = "1.0.1"
# url may conflict with reqwest::Url
url = "2.3.1"
