[package]
name = "chirp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
article_scraper = "2"
atom_syndication = "0.12.3"
chrono = "0.4.38"
directories = "5"
futures = "0.3.30"
quick-xml = "0.22"
reqwest = "0.12.4"
rss = { version = "2", features = ["atom", "builders"] }
rusqlite = { version = "0.31.0", features = ["bundled", "vtab", "array"] }
scraper = "0.19.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# typeshare is built on serde so maybe conflicts in future?
typeshare = "1"
# url may conflict with reqwest::Url
url = "2"
labels = { git = "https://github.com/exquisiteOntologist/labels.git" }
titles = { git = "https://github.com/exquisiteOntologist/PageTitlesSansSourceNames" }

[lib]
name = "chirp"
