[package]
name = "stories"
version = "0.0.0"
description = "Your window to the world"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.8", features = [] }
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.27.0", features = ["full"] }
chirp = { path = "../../chirp" }
futures = "0.3.28"
async-std = "1.12.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# There is a cargo tool that makes it easier to install packages from vcpkg
# `cargo install cargo-vcpkg`
# `cargo vcpkg build`
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "4c1db68"
dependencies = ["libxml2"]
