[package]
name = "stories"
version = "0.0.0"
description = "Your window to the world"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.16", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [] }
tauri-plugin-window-state = "2.0.0-beta.7"
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["full"] }
chirp = { path = "../../chirp" }
futures = "0.3.30"
async-std = "1.12.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
