[package]
name = "stories"
version = "0.0.0"
description = "Your window to the world"
authors = ["Jon Vaillant"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
tauri-plugin-window-state = "2.4.0"
tauri-plugin-http = "2.5.1"
tauri-plugin-shell = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
chirp = { path = "../../chirp" }
futures = "0.3.31"
async-std = "1.13.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
